--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        uses: Zelipro/buildozer-action@v1
+        uses: Zelipro/buildozer-action@master
         id: buildozer
         with:
           workdir: .
